<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".activity.RegisterActivity">

<ScrollView
    android:id="@+id/register_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/email_register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >

            <EditText
                android:id="@+id/register_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="@integer/eleven"
                android:paddingRight="@dimen/hundred"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <EditText
            android:id="@+id/register_get_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:inputType="number"
            android:padding="@dimen/ten"
            android:layout_marginTop="@dimen/ten"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/register_textInput"
            android:layout_alignTop="@id/register_textInput"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/get_verification"/>


    </RelativeLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                android:id="@+id/register_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/verification"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register"
                android:textStyle="bold" />

        </LinearLayout>

</ScrollView>
</LinearLayout>